# mt4-python-bridge_rev1

./: .gitignore  BUILD.txt  CLAUDE.md  memo  mt4-watch-gui.spec  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude_orchestrator/: README.md
.claude_orchestrator/config/: project_config.json
.claude_orchestrator/docs/: completion_definition.md  feature_inventory.md  skill_design.md  task_splitting_rules.md
.claude_orchestrator/prompts/: remote_operator.txt
.claude_orchestrator/roles/: director.md  (+7 more)
TEST/: analysis_band_walk_monthly.csv  analysis_band_walk_summary.csv  analysis_band_walk_thresholds.csv  analysis_lane_score_summary.csv  analysis_lane_summary.csv  analysis_monthly_score_summary.csv  analysis_monthly_summary.csv  analysis_trades_with_scores.csv  analyze_january_losses.py  analyze_trades.py  analyze_trades_with_lane.py  bollinger_range_v4_4__USDJPY-cd5_20250521_2026-03__trades.csv  bollinger_range_v4_4_guarded__USDJPY-cd5_20250521_2026-01__trades.csv  bollinger_range_v4_4_guarded__USDJPY-cd5_20250521_2026-03__trades.csv  task0116_headless_e2e_check.py  task0116_lane_check.py  task0120_summary_panel_visual_check.py
analysis/: analyze_b3_march_detail.py  analyze_band_walk.py  middle_already_crossed_scan.py
config/: app.yaml
scripts/: FETCH_DUKASCOPY.txt  fetch_dukascopy_data.py  split_csv_by_month.py
src/: app_cli.py  app_watch.py  app_watch_gui.py  backtest_gui.py  explore_cli.py  explore_gui.py  linked_trade_chart_widget.py  main.py
tests/: conftest.py  test_bollinger_exploration.py  test_compare_to_baseline.py
(+311 files in other folders)
