# pyproject.toml
[project]
name = "mt4-python-bridge"
version = "0.1.0"
description = "MT4 <-> Python bridge trading system"
authors = [
  { name = "tokuda" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pyyaml>=6.0",
  "PySide6>=6.7",
  "matplotlib>=3.8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]